--- a/main.css
+++ b/main.css
@@ -174,6 +174,7 @@ section {
     background: rgba(2, 20, 32, 0.979);
     height: 15rem;
     width: 15rem;
+    border-radius: 20px;
 }
 .about .image::before {
     top: 0;
