--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@ section {
 .about .image {
     flex: 1 1 42rem;
     position: relative;
+    border-radius: 20px;
 }
 .about .image::before,
 .about .image::after {
