--- a/main.css
+++ b/main.css
@@ -160,6 +160,7 @@ section {
     align-items: center;
     flex-wrap: wrap;
     gap: 8rem;
+    border-radius: 20px;
 }
 
 .about .image {
@@ -189,6 +190,7 @@ section {
 .about .image img {
     width: 100%;
     padding: 2rem;
+    border-radius: 20px;
 }
 
 .about .content {
