--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap");
 
 * {
-    font-family: 'Centrale', Sans Light Light;
+    font-family: 'Centrale', Light Light;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -31,6 +31,11 @@ html::-webkit-scrollbar-track {
 html::-webkit-scrollbar-thumb {
     /*cor da barra*/
     background: rgba(2, 20, 32, 0.979);
+}
+
+.logo {
+    height: 40px; /* Ajuste conforme necessário */
+    width: auto; /* Mantém a proporção da imagem */
 }
 
 body {
@@ -153,7 +158,7 @@ section {
 }
 
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    background: rgba(2, 20, 32, 0.979);
+    background: rgba(255, 255, 255, 0.979);
 }
 .about {
     display: flex;
@@ -162,6 +167,8 @@ section {
     gap: 8rem;
     border-radius: 20px;
 }
+
+
 
 .about .image {
     flex: 1 1 42rem;
@@ -195,19 +202,21 @@ section {
 .about .content {
     flex: 1 1 42rem;
 }
+
 .about .content span {
     font-size: 2rem;
     color: rgba(2, 20, 32, 0.979);
 }
 
+
 .about .content .title {
     font-size: 4rem;
     color: #fff;
-    margin-top: .5rem;
+    text-align: center;
 }
 .about .content p {
     font-size: 1.5rem;
-    color: #aaa;
+    color: #ffffff;
     padding: 1rem 0;
     line-height: 2;
 }
@@ -229,7 +238,8 @@ section {
 
 .about .content .box-container .box h3 i {
     padding-right: 1.5rem;
-    color: rgba(126, 126, 126, 0.979);
+    color: rgba(255, 255, 255, 0.979);
+    align-items: center;
 }
 
 .features .box-container {
