--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Centrale:wght@200;300;400;600&display=swap");
 
 * {
     font-family: 'Centrale', Regular Regular;
