--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Centrale:wght@200;300;400;600&display=swap");
 
 * {
-    font-family: 'Centrale', Regular Regular;
+    font-family: Centrale Sans Regular, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
