--- a/main.css
+++ b/main.css
@@ -38,6 +38,31 @@ html::-webkit-scrollbar-thumb {
     width: auto; /* Mantém a proporção da imagem */
 }
 
+
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: #25d366;
+    border-radius: 50%;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.whatsapp-float img {
+    width: 35px;
+    height: 35px;
+}
+
+.whatsapp-float:hover {
+    background-color: #1ebe5d;
+}
+
 body {
     background: #000;
 }
